tests/NormalTests/paczka1/fuzzy1/43147542.err
Error in line 3: hQzgVNN A915 26,34
Error in line 6: 0Lyd A915 49,3
Error in line 11: S145 S145 47,8
Error in line 8: hQzgVNN A915 78,4
Error in line 9: kl4Qa A915 77,4
Error in line 7: 0Lyd S554 23,3
Error in line 27: 0Lyd A53 36,0
